--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,10 @@ install:
   - sudo apt-get install -y gdb
 
 script:
+  - export AWS_KVS_LOG_LEVEL=2
   - make
   - ulimit -c unlimited -S
-  - if [ "$CC" != "gcc-4.4" ]; then timeout --signal=SIGABRT 10m ./tst/webrtc_client_test; fi
+  - if [ "$CC" != "gcc-4.4" ]; then timeout --signal=SIGABRT 10m ./tst/webrtc_client_test --gtest_filter="PeerConnectionFunctionalityTest.connectTwoPeers"; fi
 
 after_failure:
   - for i in $(find ./ -maxdepth 1 -name 'core*' -print); do gdb $(pwd)/tst/webrtc_client_test core* -ex "thread apply all bt" -ex "set pagination 0" -batch; done;
